# plugins-linux-beaver

./: .gitignore  README.md  config.h  meson.build  package-linux.sh
action_lines/: meson.build
antique/: meson.build
artbossing/: meson.build
aura/: meson.build  outerglow.c
blend/: meson.build
bokeh/: meson.build
border2/: meson.build
candy_spiral/: meson.build
cellular_noise/: cellularnoise.c  meson.build
checkerboards/: checkers.c  meson.build
chisel/: chiselbevel.c  meson.build
circle_patterns/: circlepatterns.c  meson.build
clay/: clay.c  meson.build
cmyk_print_preview/: meson.build
color_removal/: meson.build
color_trail/: meson.build
colored_stripes/: meson.build
colorize_luminance/: colorizeluminance.c  meson.build
concentric_shapes/: concentric-shapes.c  meson.build
confetti/: meson.build
crayon_text/: meson.build
cutout/: cutout.c  meson.build
dayone/: meson.build
double_glow_lighting_effect/: meson.build
edge_bevel/: edgebevel.c  meson.build
edge_extract/: meson.build
edge_smooth/: meson.build
engrave/: meson.build
fish_scales/: meson.build
fish_scales_core/: meson.build
fixer/: fixer.c  meson.build
flower_of_life/: fol.c  meson.build
fog/: meson.build
four_corner_gradient/: four_corners_gradient.c  meson.build
freeze/: freezeblend.c  meson.build
frosted_glass/: meson.build
glass_shapes/: glass_shapes.c  meson.build
glitch/: meson.build
gradient/: grokgradient.c  meson.build
gradient_custom/: meson.build
grands_of_sand/: meson.build
grid/: meson.build
heart_patterns/: heartpat.c  meson.build
layer_shadow/: meson.build
linux/: install.sh  uninstall.sh
ljs/: meson.build
long_shadow_pixel_data/: meson.build
lumin_boost/: meson.build
luminance_color_swap/: meson.build
motion_shadow/: meson.build  motion_shadow.c
msi/: meson.build
mystic_rose/: meson.build  noise-reduction.cl
neon_border/: meson.build
operations/: meson.build
operations/artbossing/: artbossing.c  meson.build
operations/blend/: blendassistant.c
operations/border2/: border2.c
operations/candy_spiral/: candyspiral.c  meson.build
operations/checkerboards/: meson.build
operations/chisel/: meson.build
operations/circle_patterns/: meson.build
operations/clay/: meson.build
operations/cmyk_print_preview/: cmkypreviewing.c
operations/color_removal/: colorremoval.c
operations/color_trail/: ctrail.c
operations/colored_stripes/: cstripes.c
operations/colorize_luminance/: meson.build
operations/confetti/: confetti.c
operations/confetti/opencl/: noise-reduction.cl.h
operations/crayon_text/: crayontext.c
operations/double_glow_lighting_effect/: doubleglow.c
operations/edge_bevel/: meson.build
operations/edge_smooth/: meson.build
operations/engrave/: engraver.c  meson.build
operations/fish_scales/: fishscales.c  meson.build
operations/fish_scales_core/: fishscalescore.c
operations/flower_of_life/: meson.build
operations/fog/: fog.c
operations/four_corner_gradient/: meson.build
operations/frosted_glass/: frosted_glass.c
operations/glitch/: rgbglitch.c
operations/gradient/: meson.build
operations/gradient_custom/: customgradient.c  meson.build
operations/grands_of_sand/: meson.build
operations/grid/: grids.c
operations/heart_patterns/: meson.build
operations/layer_shadow/: meson.build
operations/ljs/: ljs.c
operations/long_shadow_pixel_data/: meson.build
operations/lumin_boost/: luminboost.c
operations/luminance_color_swap/: lcs.c
operations/msi/: meson.build  msi.c
operations/mystic_rose/: meson.build  mysticroses.c
operations/neon_border/: meson.build
operations/pattern_collection/: meson.build  patterncollection.c
operations/photo_2_cartoon_2/: meson.build  photo2cartoon2.c
operations/pixel_text/: meson.build
operations/pixel_wheel_stretch/: pixel-wheel.c
operations/polygons/: meson.build
operations/port_gradient_map/: gradient-map-port.c  meson.build
operations/port_kseg/: meson.build  segment-kmeans-port.c
operations/radiant_color/: meson.build  radiantcolor.c
operations/recursive_diamonds/: diamondscircles.c  meson.build
operations/recursive_squares/: meson.build
operations/repo/: summary  summary.idx
operations/repo/refs/heads/runtime/org.gimp.GIMP.Plugin.LinuxBeaverPlugins/x86_64/: 3
operations/saber/: meson.build
operations/shape_design/: shapedesign.c
operations/sine_waves/: meson.build  sinewaves.c
operations/softmix/: meson.build
operations/ssg/: meson.build
operations/starbackground/: meson.build
operations/starburst/: meson.build  starburst.c
operations/starfield/: meson.build  starfield.c
operations/stripes/: stripes.c
operations/tile_bg/: tilebg.c
operations/tricolor_pattern_collection/: tricolorpattern.c
operations/truchet_tiles/: truchettiles.c
operations/vaporwave/: meson.build
operations/velvet_overlay/: velvetoverlay.c
operations/video_degradation_mod/: meson.build
operations/weave/: meson.build  weaves.c
operations/wood_brushed_metal/: brushed_metal_wood.c  meson.build
pattern_collection/: meson.build
pattern_collection_second/: meson.build  patterncollection2.c
pencil/: meson.build  sketch.c
photo_2_cartoon_2/: meson.build
pixel_text/: meson.build
pixel_wheel_stretch/: meson.build
polygons/: meson.build
port_gradient_map/: meson.build
port_kseg/: meson.build
port_load/: meson.build
radiant_color/: meson.build
recursive_diamonds/: meson.build
recursive_squares/: meson.build  recursivesquares.c
ring_text/: meson.build
saber/: meson.build  saber.c
shape_design/: grab_code.sh  meson.build
shape_design_core/: meson.build  shapedesigncore.c
sine_waves/: meson.build
softmix/: meson.build  softmix.c
ssg/: meson.build
star_patterns/: meson.build  starpat.c
starbackground/: meson.build
starburst/: meson.build
starfield/: meson.build
stripes/: meson.build
stroke/: basic_outline.c  meson.build
triangle_diamonds/: meson.build  triangle_diamond.c
velvet_overlay/: meson.build
video_degradation_mod/: meson.build
(+12 files in other folders)
