subdir('action_lines')
subdir('antique')
subdir('artbossing')
subdir('aura')
subdir('blend')
subdir('bokeh')
subdir('border2')
subdir('candy_spiral')
subdir('cellular_noise')
subdir('checkerboards')
subdir('chisel')
subdir('circle_patterns')
subdir('clay')
subdir('cmyk_print_preview')
subdir('color_removal')
subdir('color_trail')
subdir('colored_stripes')
subdir('colorize_luminance')
subdir('concentric_shapes')
subdir('confetti')
subdir('crayon_text')
subdir('cutout')
subdir('dayone')
subdir('double_glow_lighting_effect')
subdir('edge_bevel')
subdir('edge_extract')
subdir('edge_smooth')
subdir('engrave')
subdir('fish_scales')
subdir('fish_scales_core')
subdir('fixer')
subdir('flower_of_life')
subdir('fog')
subdir('four_corner_gradient')
subdir('freeze')
subdir('frosted_glass')
subdir('glass_shapes')
subdir('glitch')
subdir('gradient')
subdir('gradient_custom')
subdir('grands_of_sand')
subdir('grid')
subdir('heart_patterns')
subdir('layer_shadow')
subdir('ljs')
subdir('long_shadow_pixel_data')
subdir('lumin_boost')
subdir('luminance_color_swap')
subdir('motion_shadow')
subdir('msi')
subdir('mystic_rose')
subdir('neon_border')
subdir('pattern_collection')
subdir('pattern_collection_second')
subdir('pencil')
subdir('photo_2_cartoon_2')
subdir('pixel_text')
subdir('pixel_wheel_stretch')
subdir('polygons')
subdir('port_gradient_map')
subdir('port_kseg')
subdir('port_load')
subdir('radiant_color')
subdir('recursive_diamonds')
subdir('recursive_squares')
subdir('ring_text')
subdir('saber')
subdir('shape_design')
subdir('shape_design_core')
subdir('sine_waves')
subdir('softmix')
subdir('ssg')
subdir('star_patterns')
subdir('starbackground')
subdir('starburst')
subdir('starfield')
subdir('stripes')
subdir('stroke')
subdir('target_blur')
subdir('tile_bg')
subdir('triangle_diamonds')
subdir('tricolor_pattern_collection')
subdir('truchet_tiles')
subdir('vaporwave')
subdir('velvet_overlay')
subdir('video_degradation_mod')
subdir('weave')
subdir('wood_brushed_metal')